Bug 472779 - 5.2 beta1 - Soften edge slider on Sharpness feature doesn't work
Summary: 5.2 beta1 - Soften edge slider on Sharpness feature doesn't work
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: unspecified
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-07-29 18:29 UTC by apelsinchoklad
Modified: 2023-08-14 16:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description apelsinchoklad 2023-07-29 18:29:32 UTC
SUMMARY
***
Soften edge slider on Sharpness feature in the pixel brush engine doesn't work in 5.2 beta1, produces sharp edge look regardless of value. Tested on macOS and openSUSE tumbleweed. Can be seen on 'c) SK-13 Basic TILT' from the SK V1 Bundle as an example.

STEPS TO REPRODUCE
1. Pick 'b) Airbrush Soft'
2. Activate Sharpness feature and set strength to 70%
3. Paint a stroke with Soften Edge at 0, paint another one with Soften edge at 100

OBSERVED RESULT
Both strokes look the same.

EXPECTED RESULT
In 5.1.5 the stroke painted with Soften edge at 100 have a partially soft edge.

SOFTWARE/OS VERSIONS
macOS: 10.13.6
Linux/KDE Plasma: openSUSE tumbleweed with Plasma DE
Comment 1 tomtomtomreportingin 2023-07-29 23:04:00 UTC
I can confirm. Some of the Sharpness options including https://bugs.kde.org/show_bug.cgi?id=472723 might have broke as part of the recent brush editor refactoring.
Comment 2 Dmitry Kazakov 2023-08-14 16:11:54 UTC
Git commit 5fdf853a1a1fe21b04c6bf02584762040bd66628 by Dmitry Kazakov.
Committed on 14/08/2023 at 18:11.
Pushed by dkazakov into branch 'master'.

Fix sharpness option being uninitialized
Related: bug 472723

M  +1    -1    plugins/paintops/libpaintop/KisSharpnessOption.cpp

https://invent.kde.org/graphics/krita/-/commit/5fdf853a1a1fe21b04c6bf02584762040bd66628
Comment 3 Dmitry Kazakov 2023-08-14 16:12:44 UTC
Git commit 5209cf9464fd7bb5c9fe1e9c02365e659b755409 by Dmitry Kazakov.
Committed on 14/08/2023 at 18:12.
Pushed by dkazakov into branch 'krita/5.2'.

Fix sharpness option being uninitialized
Related: bug 472723

M  +1    -1    plugins/paintops/libpaintop/KisSharpnessOption.cpp

https://invent.kde.org/graphics/krita/-/commit/5209cf9464fd7bb5c9fe1e9c02365e659b755409