Fix sharpness option being uninitialized

BUG:472779
BUG:472723